# stewart_platform

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
config/: .platformModel.yaml.swo  .platformModel.yaml.swp  .vision.yaml.swp  ffmv.yaml  platformModel.yaml  platformModel.yaml~  servoConfig.yaml  vision.yaml  vision.yaml.bak  vision.yaml.chameleon  x360.yaml
launch/: .stewart_vision.launch.swp  single_joy.launch  stewart.launch  stewart_full.launch  stewart_full_no_debayer.launch  stewart_ik.launch  stewart_vision.launch  stewart_vision_no_debayer.launch  stewart_vision_single.launch
matlab/: .stewart_IBVS.m.swp  debug_IBVS.m  draw_stewart.m  modelStewartPlatform.m  moveServosDegrees.m  stewart_IBVS.m  stewart_ikcf.m  stewart_test.m  stewart_test_hw.m  stop_vs.m
matlab/rvctools/common/: imeshgrid.m  multidfprintf.m
matlab/rvctools/robot/info/: helptoc.xml
matlab/rvctools/vision/: CHANGES  Contents.m
matlab/rvctools/vision/@CentralCamera/: visjac_p.m
matlab/rvctools/vision/info/: contents_toc.html  helpfuncbycat.xml
matlab/rvctools/vision/mex/: closest.mexglx  (+20 more)
nodes/: .transform.py.swp  IBVS_controller.py  pelican_ctrl.py  stewart_ik.py  stewart_ik.py~  stewart_move_servos.py  stewart_platform_x360.py  transform.py
nodes/peter_corke/: Makefile
nodes/peter_corke/.svn/: entries
nodes/peter_corke/robot/: plot.py
src/: .CircleDetect.cpp.swp  CMakeLists.txt  CMakeLists.txt~  CircleDetect.cpp  CircleDetectROS.cpp  CircleDetectROS_dc1394.cpp  CircleDetectROS_experimental.cpp  CircleDetectROS_hough_circle.cpp  single_image.cpp
(+197 files in other folders)
